--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,8 @@
 [core]
 	excludesfile = .gitignore_global
         editor = vim
+        # Don't consider trailing space change as a cause for merge conflicts
+        whitespace = -trailing-space
 [diff]
         tool = vimdiff
 [push]
@@ -10,13 +12,45 @@
 [status]
 	submoduleSummary = true
 [diff]
+        # Display submodule-related information (commit listings)
 	submodule = log
+[fetch]
+        # Auto-fetch submodule changes (won't auto-update)
+	recurseSubmodules = on-demand
+[log]
+        # Use abbrev SHAs whenever possible/relevant instead of full 40 chars
+	abbrevCommit = true
+	# Automatically --follow when given a single path
+	follow = true
+[merge]
+	# Display common-ancestor blocks in conflict hunks
+	conflictStyle = diff3
+[mergetool]
+	# Clean up backup files created by merge tools on tool exit
+	keepBackup = false
+	# Clean up temp files created by merge tools on tool exit
+	keepTemporaries = false
+	# Put the temp files in a dedicated dir anyway
+	writeToTemp = true
+	# Auto-accept file prompts when launching merge tools
+	prompt = false
+[push]
+	# Default push should only push the current branch to its push target, regardless of its remote name
+	default = upstream
+	# When pushing, also push tags whose commit-ishs are now reachable upstream
+	followTags = true
+[status]
+	# Display submodule rev change summaries in status
+	submoduleSummary = true
+	# Recursively traverse untracked directories to display all contents
+	showUntrackedFiles = all
+
 [github]
         user = JohanBjoerklund
 [url "https://github.com/"]
         insteadOf = gh:
 [color]
-        ui = true
+        ui = auto
 [color "branch"]
         current = yellow reverse
         local = yellow
@@ -34,3 +68,7 @@
         st = status
         co = checkout
         unstage = reset HEAD --
+        lg = log --graph --date=relative --pretty=tformat:'%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen(%an %ad)%Creset'
+        oops = commit --amend --no-edit
+        review-loacal = '!git lg @{push}..'
+
