--- a/.gitconfig
+++ b/.gitconfig
@@ -70,5 +70,5 @@
         unstage = reset HEAD --
         lg = log --graph --date=relative --pretty=tformat:'%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen(%an %ad)%Creset'
         oops = commit --amend --no-edit
-        review-loacal = '!git lg @{push}..'
+        review-local = '!git lg @{push}..'
 
