Add new iterm settings

--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -643,10 +643,12 @@
 	<string>548 115 706 272 0 0 1280 777 </string>
 	<key>NSWindow Frame Preferences</key>
 	<string>356 271 606 456 0 0 1280 777 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>804 577 400 129 0 0 1280 777 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>330 289 620 392 0 0 1280 777 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>260 204 796 473 0 0 1280 777 </string>
+	<string>260 173 918 512 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>0 448 1280 329 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -2157,7 +2159,7 @@
 	<key>OpenBookmark</key>
 	<false/>
 	<key>OpenNoWindowsAtStartup</key>
-	<true/>
+	<false/>
 	<key>OpenTmuxWindowsIn</key>
 	<integer>0</integer>
 	<key>PassOnControlClick</key>
@@ -2216,7 +2218,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-09-13T19:19:26Z</date>
+	<date>2016-11-13T06:31:24Z</date>
 	<key>SavePasteHistory</key>
 	<true/>
 	<key>ShowBookmarkName</key>
@@ -2262,6 +2264,6 @@
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
-	<string>3.0.9</string>
+	<string>3.0.10</string>
 </dict>
 </plist>
