--- a/.gitconfig
+++ b/.gitconfig
@@ -71,4 +71,7 @@
         lg = log --graph --date=relative --pretty=tformat:'%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen(%an %ad)%Creset'
         oops = commit --amend --no-edit
         review-local = "!git lg @{push}.."
+	s = status -s
 
+[pull]
+	rebase = true
