--- a/.gitconfig
+++ b/.gitconfig
@@ -61,8 +61,8 @@
         old = red bold
         new = green bold
 [color "status"]
-        added = yellow
-        changed = green
+        added = green
+        changed = yellow
         untracked = red
 [alias]
         st = status
