--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,7 @@
     ],
     "arrow-parens": [
       "warn",
-      "as-needed",
-      {
-        "requireForBlockBody": true
-      }
+      "as-needed"
     ],
     "arrow-spacing": "warn",
     "block-scoped-var": "error",
@@ -195,7 +192,7 @@
     "object-curly-newline": [
       "warn",
       {
-        "minProperties": 2
+        "multiline": true
       }
     ],
     "object-curly-spacing": [
