--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,11 @@
 {
   "env": {
     "browser": true,
-    "commonjs": true,
     "es6": true
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "react-app"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -12,236 +13,47 @@
     "sourceType": "module"
   },
   "rules": {
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "jsx-quotes": [
+      "error",
+      "prefer-single"
+    ],
+    "semi": [
+      "error",
+      "never"
+    ],
     "array-bracket-spacing": [
       "warn",
-      "always",
-      {
-
-      }
-    ],
-    "arrow-body-style": [
-      "warn",
-      "as-needed"
-    ],
-    "arrow-parens": [
-      "warn",
-      "as-needed"
-    ],
-    "arrow-spacing": "warn",
-    "block-scoped-var": "error",
-    "block-spacing": [
-      "warn",
       "always"
-    ],
-    "brace-style": [
-      "warn",
-      "1tbs",
-      {
-        "allowSingleLine": true
-      }
-    ],
-    "camelcase": [
-      "warn",
-      {
-        "properties": "always"
-      }
-    ],
-    "comma-dangle": [
-      "warn",
-      "never"
-    ],
-    "comma-spacing": "warn",
-    "comma-style": [
-      "warn",
-      "last"
-    ],
-    "computed-property-spacing": [
-      "warn",
-      "never"
-    ],
-    "consistent-this": [
-      "error",
-      "_this"
-    ],
-    "default-case": "error",
-    "dot-location": [
-      "warn",
-      "property"
-    ],
-    "eol-last": [
-      "warn",
-      "never"
-    ],
-    "eqeqeq": "error",
-    "func-call-spacing": [
-      "error",
-      "never"
-    ],
-    "func-name-matching": [
-      "warn",
-      "always"
-    ],
-    "generator-star-spacing": [
-      "warn",
-      "before"
-    ],
-    "indent": [
-      "error",
-      2,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "keyword-spacing": "warn",
-    "max-depth": [
-      "error",
-      {
-        "max": 3
-      }
-    ],
-    "max-nested-callbacks": [
-      "error",
-      {
-        "max": 3
-      }
-    ],
-    "max-params": [
-      "warn",
-      {
-        "max": 5
-      }
-    ],
-    "max-statements-per-line": [
-      "warn",
-      {
-        "max": 1
-      }
-    ],
-    "newline-after-var": [
-      "warn",
-      "always"
-    ],
-    "newline-before-return": "warn",
-    "newline-per-chained-call": [
-      "warn",
-      {
-        "ignoreChainWithDepth": 2
-      }
-    ],
-    "no-alert": "error",
-    "no-array-constructor": "error",
-    "no-bitwise": "error",
-    "no-caller": "error",
-    "no-console": "warn",
-    "no-confusing-arrow": [
-      "error",
-      {
-        "allowParens": true
-      }
-    ],
-    "no-debugger": "error",
-    "no-duplicate-imports": "warn",
-    "no-empty-function": "error",
-    "no-else-return": "error",
-    "no-div-regex": "error",
-    "no-eq-null": "error",
-    "no-eval": "error",
-    "no-extend-native": "error",
-    "no-extra-bind": "warn",
-    "no-floating-decimal": "error",
-    "no-label-var": "warn",
-    "no-lone-blocks": "warn",
-    "no-lonely-if": "warn",
-    "no-loop-func": "error",
-    "no-multi-assign": "error",
-    "no-multi-spaces": [
-      "warn",
-      {
-        "exceptions": {
-          "Property": true
-        }
-      }
-    ],
-    "no-nested-ternary": "error",
-    "no-new-func": "error",
-    "no-new-object": "error",
-    "no-redeclare": "error",
-    "no-return-assign": "error",
-    "no-shadow-restricted-names": "error",
-    "no-throw-literal": "warn",
-    "no-undef-init": "error",
-    "no-undefined": "error",
-    "no-unused-vars": "warn",
-    "no-use-before-define": "error",
-    "no-useless-call": "warn",
-    "no-useless-concat": "error",
-    "no-useless-rename": "error",
-    "no-useless-return": "error",
-    "no-unreachable": "error",
-    "no-warning-comments": "warn",
-    "no-whitespace-before-property": "warn",
-    "no-with": "error",
-    "object-curly-newline": [
-      "warn",
-      {
-        "multiline": true
-      }
     ],
     "object-curly-spacing": [
       "warn",
       "always"
     ],
-    "object-property-newline": "warn",
-    "one-var-declaration-per-line": "warn",
-    "padded-blocks": [
+    "max-len": [
       "warn",
       {
-        "classes": "always"
+        "code": 80,
+        "tabWidth": 2,
+        "ignoreComments": true,
+        "ignoreStrings": true
       }
     ],
-    "prefer-arrow-callback": "warn",
-    "prefer-const": "warn",
-    "prefer-destructuring": [
+    "react/jsx-curly-spacing": [
       "warn",
       {
-        "array": false,
-        "object": true
+        "when": "always",
+        "children": true
       }
     ],
-    "prefer-rest-params": "warn",
-    "prefer-spread": "warn",
-    "prefer-template": "warn",
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "radix": "warn",
-    "space-before-blocks": [
+    "react/jsx-closing-bracket-location": [
       "warn",
-      "always"
+      "tag-aligned"
     ],
-    "space-in-parens": [
-      "warn",
-      "never"
-    ],
-    "space-infix-ops": "warn",
-    "space-unary-ops": [
-      "warn",
-      {
-        "words": true,
-        "nonwords": false
-      }
-    ],
-    "template-curly-spacing": [
-      "warn",
-      "never"
-    ],
-    "vars-on-top": "warn",
-    "semi": [
-      "error",
-      "never"
-    ],
-    "yield-star-spacing": "warn",
-    "yoda": "error"
+    "react/jsx-tag-spacing": ["warn", { "beforeSelfClosing": "always" }],
+    "react/jsx-indent": [ "error", 2, { "checkAttributes": true, "indentLogicalExpressions": true } ]
   }
 }
