--- a/.tern-config
+++ b/.tern-config
@@ -1,6 +1,6 @@
 {
   "ecmaVersion": 6,
-  "libs": [ "browser" ],
+  "libs": [ "browser", "ecma5", "ecma6" ],
   "plugins": {
     "es_modules": {},
     "modules": {},
