Add workdir cofig to .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
         editor = vim
         # Don't consider trailing space change as a cause for merge conflicts
         whitespace = -trailing-space
+	autocrlf = input
 [diff]
         tool = vimdiff
 [push]
